--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "ag-grid-community": "^27.0.0",
-    "ag-grid-react": "^27.0.0",
+    "ag-grid-community": "^32.3.3",
+    "ag-grid-react": "^32.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
+    "sass": "^1.82.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
